Made footer stick to the bottom and fixed spacing in script.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,8 @@ header {
     background-color:rgb(25, 6, 110)
 
 }
+
+
 .show {
     display: block;
 }
@@ -55,6 +57,13 @@ footer {
     color: #fff;
     padding: 10px;
     margin-top: 20px;
+}
+
+footer {
+    position: fixed;
+    height: 80px;
+    bottom: 0;
+    width: 100%;
 }
 
 footer, a {
